shared/fmod/headers/fmod.h


typedef int                       FMOD_BOOL;
typedef struct FMOD_SYSTEM        FMOD_SYSTEM;
typedef struct FMOD_SOUND         FMOD_SOUND;
typedef struct FMOD_CHANNEL       FMOD_CHANNEL;
typedef struct FMOD_CHANNELGROUP  FMOD_CHANNELGROUP;
typedef struct FMOD_DSP           FMOD_DSP;
typedef struct FMOD_DSPCONNECTION FMOD_DSPCONNECTION;
typedef unsigned int              FMOD_MODE;
typedef unsigned int              FMOD_TIMEUNIT;
typedef enum
{
    FMOD_OK,                        
    FMOD_ERR_ALREADYLOCKED,         
    FMOD_ERR_BADCOMMAND,            
    FMOD_ERR_CDDA_DRIVERS,          
    FMOD_ERR_CDDA_INIT,             
    FMOD_ERR_CDDA_INVALID_DEVICE,   
    FMOD_ERR_CDDA_NOAUDIO,          
    FMOD_ERR_CDDA_NODEVICES,        
    FMOD_ERR_CDDA_NODISC,           
    FMOD_ERR_CDDA_READ,             
    FMOD_ERR_CHANNEL_ALLOC,         
    FMOD_ERR_CHANNEL_STOLEN,        
    FMOD_ERR_COM,                   
    FMOD_ERR_DMA,                   
    FMOD_ERR_DSP_CONNECTION,        
    FMOD_ERR_DSP_FORMAT,            
    FMOD_ERR_DSP_NOTFOUND,          
    FMOD_ERR_DSP_RUNNING,           
    FMOD_ERR_DSP_TOOMANYCONNECTIONS,
    FMOD_ERR_FILE_BAD,              
    FMOD_ERR_FILE_COULDNOTSEEK,     
    FMOD_ERR_FILE_DISKEJECTED,      
    FMOD_ERR_FILE_EOF,              
    FMOD_ERR_FILE_NOTFOUND,         
    FMOD_ERR_FILE_UNWANTED,         
    FMOD_ERR_FORMAT,                
    FMOD_ERR_HTTP,                  
    FMOD_ERR_HTTP_ACCESS,           
    FMOD_ERR_HTTP_PROXY_AUTH,       
    FMOD_ERR_HTTP_SERVER_ERROR,     
    FMOD_ERR_HTTP_TIMEOUT,          
    FMOD_ERR_INITIALIZATION,        
    FMOD_ERR_INITIALIZED,           
    FMOD_ERR_INTERNAL,              
    FMOD_ERR_INVALID_ADDRESS,       
    FMOD_ERR_INVALID_FLOAT,         
    FMOD_ERR_INVALID_HANDLE,        
    FMOD_ERR_INVALID_PARAM,         
    FMOD_ERR_INVALID_POSITION,      
    FMOD_ERR_INVALID_SPEAKER,       
    FMOD_ERR_INVALID_SYNCPOINT,     
    FMOD_ERR_INVALID_VECTOR,        
    FMOD_ERR_MAXAUDIBLE,            
    FMOD_ERR_MEMORY,                
    FMOD_ERR_MEMORY_CANTPOINT,      
    FMOD_ERR_MEMORY_SRAM,           
    FMOD_ERR_NEEDS2D,               
    FMOD_ERR_NEEDS3D,               
    FMOD_ERR_NEEDSHARDWARE,         
    FMOD_ERR_NEEDSSOFTWARE,         
    FMOD_ERR_NET_CONNECT,           
    FMOD_ERR_NET_SOCKET_ERROR,      
    FMOD_ERR_NET_URL,               
    FMOD_ERR_NET_WOULD_BLOCK,       
    FMOD_ERR_NOTREADY,              
    FMOD_ERR_OUTPUT_ALLOCATED,      
    FMOD_ERR_OUTPUT_CREATEBUFFER,   
    FMOD_ERR_OUTPUT_DRIVERCALL,     
    FMOD_ERR_OUTPUT_ENUMERATION,    
    FMOD_ERR_OUTPUT_FORMAT,         
    FMOD_ERR_OUTPUT_INIT,           
    FMOD_ERR_OUTPUT_NOHARDWARE,     
    FMOD_ERR_OUTPUT_NOSOFTWARE,     
    FMOD_ERR_PAN,                   
    FMOD_ERR_PLUGIN,                
    FMOD_ERR_PLUGIN_INSTANCES,      
    FMOD_ERR_PLUGIN_MISSING,        
    FMOD_ERR_PLUGIN_RESOURCE,       
    FMOD_ERR_PRELOADED,             
    FMOD_ERR_PROGRAMMERSOUND,       
    FMOD_ERR_RECORD,                
    FMOD_ERR_REVERB_INSTANCE,       
    FMOD_ERR_SUBSOUND_ALLOCATED,    
    FMOD_ERR_SUBSOUND_CANTMOVE,     
    FMOD_ERR_SUBSOUND_MODE,         
    FMOD_ERR_SUBSOUNDS,             
    FMOD_ERR_TAGNOTFOUND,           
    FMOD_ERR_TOOMANYCHANNELS,       
    FMOD_ERR_UNIMPLEMENTED,         
    FMOD_ERR_UNINITIALIZED,         
    FMOD_ERR_UNSUPPORTED,           
    FMOD_ERR_UPDATE,                
    FMOD_ERR_VERSION,               
    FMOD_ERR_EVENT_FAILED,          
    FMOD_ERR_EVENT_INFOONLY,        
    FMOD_ERR_EVENT_INTERNAL,        
    FMOD_ERR_EVENT_MAXSTREAMS,      
    FMOD_ERR_EVENT_MISMATCH,        
    FMOD_ERR_EVENT_NAMECONFLICT,    
    FMOD_ERR_EVENT_NOTFOUND,        
    FMOD_ERR_EVENT_NEEDSSIMPLE,     
    FMOD_ERR_EVENT_GUIDCONFLICT,    
    FMOD_ERR_EVENT_ALREADY_LOADED,  
    FMOD_ERR_MUSIC_UNINITIALIZED,   
    FMOD_ERR_MUSIC_NOTFOUND,        
    FMOD_ERR_MUSIC_NOCALLBACK,      
    FMOD_RESULT_FORCEINT = 65536    
} FMOD_RESULT;
typedef struct
{
	float x;        
    float y;        
    float z;        
} FMOD_VECTOR;
typedef enum
{
    FMOD_DSP_FFT_WINDOW_RECT,            
    FMOD_DSP_FFT_WINDOW_TRIANGLE,        
    FMOD_DSP_FFT_WINDOW_HAMMING,         
    FMOD_DSP_FFT_WINDOW_HANNING,         
    FMOD_DSP_FFT_WINDOW_BLACKMAN,        
    FMOD_DSP_FFT_WINDOW_BLACKMANHARRIS,  
    FMOD_DSP_FFT_WINDOW_MAX,             
    FMOD_DSP_FFT_WINDOW_FORCEINT = 65536 
} FMOD_DSP_FFT_WINDOW;
typedef struct FMOD_REVERB_CHANNELPROPERTIES
{                                      
    int          Direct;               
    int          Room;                 
    unsigned int Flags;                
    FMOD_DSP    *ConnectionPoint;      
} FMOD_REVERB_CHANNELPROPERTIES;
FMOD_RESULT FMOD_Channel_Set3DConeSettings     (FMOD_CHANNEL *channel, float insideconeangle, float outsideconeangle, float outsidevolume);
FMOD_RESULT FMOD_Channel_Get3DConeSettings     (FMOD_CHANNEL *channel, float *insideconeangle, float *outsideconeangle, float *outsidevolume);
FMOD_RESULT FMOD_Channel_Set3DConeOrientation  (FMOD_CHANNEL *channel, FMOD_VECTOR *orientation);
FMOD_RESULT FMOD_Channel_Get3DConeOrientation  (FMOD_CHANNEL *channel, FMOD_VECTOR *orientation);
FMOD_RESULT FMOD_Channel_Set3DCustomRolloff    (FMOD_CHANNEL *channel, FMOD_VECTOR *points, int numpoints);
FMOD_RESULT FMOD_Channel_Get3DCustomRolloff    (FMOD_CHANNEL *channel, FMOD_VECTOR **points, int *numpoints);
FMOD_RESULT FMOD_Channel_Set3DOcclusion        (FMOD_CHANNEL *channel, float directocclusion, float reverbocclusion);
FMOD_RESULT FMOD_Channel_Get3DOcclusion        (FMOD_CHANNEL *channel, float *directocclusion, float *reverbocclusion);
FMOD_RESULT FMOD_Channel_Set3DSpread           (FMOD_CHANNEL *channel, float angle);
FMOD_RESULT FMOD_Channel_Get3DSpread           (FMOD_CHANNEL *channel, float *angle);
FMOD_RESULT FMOD_Channel_Set3DPanLevel         (FMOD_CHANNEL *channel, float level);
FMOD_RESULT FMOD_Channel_Get3DPanLevel         (FMOD_CHANNEL *channel, float *level);
FMOD_RESULT FMOD_Channel_Set3DDopplerLevel     (FMOD_CHANNEL *channel, float level);
FMOD_RESULT FMOD_Channel_Get3DDopplerLevel     (FMOD_CHANNEL *channel, float *level);
FMOD_RESULT FMOD_Channel_Set3DDistanceFilter   (FMOD_CHANNEL *channel, FMOD_BOOL custom, float customLevel, float centerFreq);
FMOD_RESULT FMOD_Channel_Get3DDistanceFilter   (FMOD_CHANNEL *channel, FMOD_BOOL *custom, float *customLevel, float *centerFreq);
FMOD_RESULT FMOD_Channel_GetDSPHead            (FMOD_CHANNEL *channel, FMOD_DSP **dsp);
FMOD_RESULT FMOD_Channel_AddDSP                (FMOD_CHANNEL *channel, FMOD_DSP *dsp, FMOD_DSPCONNECTION **connection);
FMOD_RESULT FMOD_Channel_IsPlaying             (FMOD_CHANNEL *channel, FMOD_BOOL *isplaying);
FMOD_RESULT FMOD_Channel_IsVirtual             (FMOD_CHANNEL *channel, FMOD_BOOL *isvirtual);
FMOD_RESULT FMOD_Channel_GetAudibility         (FMOD_CHANNEL *channel, float *audibility);
FMOD_RESULT FMOD_Channel_GetCurrentSound       (FMOD_CHANNEL *channel, FMOD_SOUND **sound);
FMOD_RESULT FMOD_Channel_GetSpectrum           (FMOD_CHANNEL *channel, float *spectrumarray, int numvalues, int channeloffset, FMOD_DSP_FFT_WINDOW windowtype);
FMOD_RESULT FMOD_Channel_GetWaveData           (FMOD_CHANNEL *channel, float *wavearray, int numvalues, int channeloffset);
FMOD_RESULT FMOD_Channel_GetIndex              (FMOD_CHANNEL *channel, int *index);
FMOD_RESULT FMOD_Channel_SetMode               (FMOD_CHANNEL *channel, FMOD_MODE mode);
FMOD_RESULT FMOD_Channel_GetMode               (FMOD_CHANNEL *channel, FMOD_MODE *mode);
FMOD_RESULT FMOD_Channel_SetLoopCount          (FMOD_CHANNEL *channel, int loopcount);
FMOD_RESULT FMOD_Channel_GetLoopCount          (FMOD_CHANNEL *channel, int *loopcount);
FMOD_RESULT FMOD_Channel_SetLoopPoints         (FMOD_CHANNEL *channel, unsigned int loopstart, FMOD_TIMEUNIT loopstarttype, unsigned int loopend, FMOD_TIMEUNIT loopendtype);
FMOD_RESULT FMOD_Channel_GetLoopPoints         (FMOD_CHANNEL *channel, unsigned int *loopstart, FMOD_TIMEUNIT loopstarttype, unsigned int *loopend, FMOD_TIMEUNIT loopendtype);
FMOD_RESULT FMOD_Channel_SetUserData           (FMOD_CHANNEL *channel, void *userdata);
FMOD_RESULT FMOD_Channel_GetUserData           (FMOD_CHANNEL *channel, void **userdata);
FMOD_RESULT FMOD_Channel_GetMemoryInfo         (FMOD_CHANNEL *channel, unsigned int memorybits, unsigned int event_memorybits, unsigned int *memoryused, FMOD_MEMORY_USAGE_DETAILS *memoryused_details);
FMOD_RESULT FMOD_ChannelGroup_Release          (FMOD_CHANNELGROUP *channelgroup);
FMOD_RESULT FMOD_ChannelGroup_GetSystemObject  (FMOD_CHANNELGROUP *channelgroup, FMOD_SYSTEM **system);
FMOD_RESULT FMOD_ChannelGroup_SetVolume        (FMOD_CHANNELGROUP *channelgroup, float volume);
FMOD_RESULT FMOD_ChannelGroup_GetVolume        (FMOD_CHANNELGROUP *channelgroup, float *volume);
FMOD_RESULT FMOD_ChannelGroup_SetPitch         (FMOD_CHANNELGROUP *channelgroup, float pitch);
FMOD_RESULT FMOD_ChannelGroup_GetPitch         (FMOD_CHANNELGROUP *channelgroup, float *pitch);
FMOD_RESULT FMOD_ChannelGroup_Set3DOcclusion   (FMOD_CHANNELGROUP *channelgroup, float directocclusion, float reverbocclusion);
FMOD_RESULT FMOD_ChannelGroup_Get3DOcclusion   (FMOD_CHANNELGROUP *channelgroup, float *directocclusion, float *reverbocclusion);
FMOD_RESULT FMOD_ChannelGroup_SetPaused        (FMOD_CHANNELGROUP *channelgroup, FMOD_BOOL paused);
FMOD_RESULT FMOD_ChannelGroup_GetPaused        (FMOD_CHANNELGROUP *channelgroup, FMOD_BOOL *paused);
FMOD_RESULT FMOD_ChannelGroup_SetMute          (FMOD_CHANNELGROUP *channelgroup, FMOD_BOOL mute);
FMOD_RESULT FMOD_ChannelGroup_GetMute          (FMOD_CHANNELGROUP *channelgroup, FMOD_BOOL *mute);
FMOD_RESULT FMOD_ChannelGroup_Stop             (FMOD_CHANNELGROUP *channelgroup);
FMOD_RESULT FMOD_ChannelGroup_OverrideVolume   (FMOD_CHANNELGROUP *channelgroup, float volume);
FMOD_RESULT FMOD_ChannelGroup_OverrideFrequency(FMOD_CHANNELGROUP *channelgroup, float frequency);
FMOD_RESULT FMOD_ChannelGroup_OverridePan      (FMOD_CHANNELGROUP *channelgroup, float pan);
FMOD_RESULT FMOD_ChannelGroup_OverrideReverbProperties(FMOD_CHANNELGROUP *channelgroup, const FMOD_REVERB_CHANNELPROPERTIES *prop);
FMOD_RESULT FMOD_ChannelGroup_Override3DAttributes(FMOD_CHANNELGROUP *channelgroup, const FMOD_VECTOR *pos, const FMOD_VECTOR *vel);
FMOD_RESULT FMOD_ChannelGroup_OverrideSpeakerMix(FMOD_CHANNELGROUP *channelgroup, float frontleft, float frontright, float center, float lfe, float backleft, float backright, float sideleft, float sideright);
FMOD_RESULT FMOD_ChannelGroup_AddGroup         (FMOD_CHANNELGROUP *channelgroup, FMOD_CHANNELGROUP *group);
FMOD_RESULT FMOD_ChannelGroup_GetNumGroups     (FMOD_CHANNELGROUP *channelgroup, int *numgroups);
FMOD_RESULT FMOD_ChannelGroup_GetGroup         (FMOD_CHANNELGROUP *channelgroup, int index, FMOD_CHANNELGROUP **group);
FMOD_RESULT FMOD_ChannelGroup_GetParentGroup   (FMOD_CHANNELGROUP *channelgroup, FMOD_CHANNELGROUP **group);
FMOD_RESULT FMOD_ChannelGroup_GetDSPHead       (FMOD_CHANNELGROUP *channelgroup, FMOD_DSP **dsp);
FMOD_RESULT FMOD_ChannelGroup_AddDSP           (FMOD_CHANNELGROUP *channelgroup, FMOD_DSP *dsp, FMOD_DSPCONNECTION **connection);
FMOD_RESULT FMOD_ChannelGroup_GetName          (FMOD_CHANNELGROUP *channelgroup, char *name, int namelen);
FMOD_RESULT FMOD_ChannelGroup_GetNumChannels   (FMOD_CHANNELGROUP *channelgroup, int *numchannels);
FMOD_RESULT FMOD_ChannelGroup_GetChannel       (FMOD_CHANNELGROUP *channelgroup, int index, FMOD_CHANNEL **channel);
FMOD_RESULT FMOD_ChannelGroup_GetSpectrum      (FMOD_CHANNELGROUP *channelgroup, float *spectrumarray, int numvalues, int channeloffset, FMOD_DSP_FFT_WINDOW windowtype);
FMOD_RESULT FMOD_ChannelGroup_GetWaveData      (FMOD_CHANNELGROUP *channelgroup, float *wavearray, int numvalues, int channeloffset);
FMOD_RESULT FMOD_ChannelGroup_SetUserData      (FMOD_CHANNELGROUP *channelgroup, void *userdata);
FMOD_RESULT FMOD_ChannelGroup_GetUserData      (FMOD_CHANNELGROUP *channelgroup, void **userdata);
FMOD_RESULT FMOD_ChannelGroup_GetMemoryInfo    (FMOD_CHANNELGROUP *channelgroup, unsigned int memorybits, unsigned int event_memorybits, unsigned int *memoryused, FMOD_MEMORY_USAGE_DETAILS *memoryused_details);