shared/fmod/fmod.odin


    @(link_name="FMOD_Channel_Set3DConeSettings")
    FMOD_Channel_Set3DConeSettings :: proc(channel : ^FMOD_CHANNEL, insideconeangle : _c.float, outsideconeangle : _c.float, outsidevolume : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DConeSettings")
    FMOD_Channel_Get3DConeSettings :: proc(channel : ^FMOD_CHANNEL, insideconeangle : ^_c.float, outsideconeangle : ^_c.float, outsidevolume : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Set3DConeOrientation")
    FMOD_Channel_Set3DConeOrientation :: proc(channel : ^FMOD_CHANNEL, orientation : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DConeOrientation")
    FMOD_Channel_Get3DConeOrientation :: proc(channel : ^FMOD_CHANNEL, orientation : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Set3DCustomRolloff")
    FMOD_Channel_Set3DCustomRolloff :: proc(channel : ^FMOD_CHANNEL, points : ^FMOD_VECTOR, numpoints : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DCustomRolloff")
    FMOD_Channel_Get3DCustomRolloff :: proc(channel : ^FMOD_CHANNEL, points : ^^FMOD_VECTOR, numpoints : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Set3DOcclusion")
    FMOD_Channel_Set3DOcclusion :: proc(channel : ^FMOD_CHANNEL, directocclusion : _c.float, reverbocclusion : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DOcclusion")
    FMOD_Channel_Get3DOcclusion :: proc(channel : ^FMOD_CHANNEL, directocclusion : ^_c.float, reverbocclusion : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Set3DSpread")
    FMOD_Channel_Set3DSpread :: proc(channel : ^FMOD_CHANNEL, angle : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DSpread")
    FMOD_Channel_Get3DSpread :: proc(channel : ^FMOD_CHANNEL, angle : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Set3DPanLevel")
    FMOD_Channel_Set3DPanLevel :: proc(channel : ^FMOD_CHANNEL, level : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DPanLevel")
    FMOD_Channel_Get3DPanLevel :: proc(channel : ^FMOD_CHANNEL, level : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Set3DDopplerLevel")
    FMOD_Channel_Set3DDopplerLevel :: proc(channel : ^FMOD_CHANNEL, level : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DDopplerLevel")
    FMOD_Channel_Get3DDopplerLevel :: proc(channel : ^FMOD_CHANNEL, level : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Set3DDistanceFilter")
    FMOD_Channel_Set3DDistanceFilter :: proc(channel : ^FMOD_CHANNEL, custom : _c.int, customLevel : _c.float, centerFreq : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_Get3DDistanceFilter")
    FMOD_Channel_Get3DDistanceFilter :: proc(channel : ^FMOD_CHANNEL, custom : ^_c.int, customLevel : ^_c.float, centerFreq : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetDSPHead")
    FMOD_Channel_GetDSPHead :: proc(channel : ^FMOD_CHANNEL, dsp : ^^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_AddDSP")
    FMOD_Channel_AddDSP :: proc(channel : ^FMOD_CHANNEL, dsp : ^FMOD_DSP, connection : ^^FMOD_DSPCONNECTION) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_IsPlaying")
    FMOD_Channel_IsPlaying :: proc(channel : ^FMOD_CHANNEL, isplaying : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_IsVirtual")
    FMOD_Channel_IsVirtual :: proc(channel : ^FMOD_CHANNEL, isvirtual : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetAudibility")
    FMOD_Channel_GetAudibility :: proc(channel : ^FMOD_CHANNEL, audibility : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetCurrentSound")
    FMOD_Channel_GetCurrentSound :: proc(channel : ^FMOD_CHANNEL, sound : ^^FMOD_SOUND) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetSpectrum")
    FMOD_Channel_GetSpectrum :: proc(channel : ^FMOD_CHANNEL, spectrumarray : ^_c.float, numvalues : _c.int, channeloffset : _c.int, windowtype : FMOD_DSP_FFT_WINDOW) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetWaveData")
    FMOD_Channel_GetWaveData :: proc(channel : ^FMOD_CHANNEL, wavearray : ^_c.float, numvalues : _c.int, channeloffset : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetIndex")
    FMOD_Channel_GetIndex :: proc(channel : ^FMOD_CHANNEL, index : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_SetMode")
    FMOD_Channel_SetMode :: proc(channel : ^FMOD_CHANNEL, mode : _c.uint) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetMode")
    FMOD_Channel_GetMode :: proc(channel : ^FMOD_CHANNEL, mode : ^_c.uint) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_SetLoopCount")
    FMOD_Channel_SetLoopCount :: proc(channel : ^FMOD_CHANNEL, loopcount : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetLoopCount")
    FMOD_Channel_GetLoopCount :: proc(channel : ^FMOD_CHANNEL, loopcount : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_SetLoopPoints")
    FMOD_Channel_SetLoopPoints :: proc(channel : ^FMOD_CHANNEL, loopstart : _c.uint, loopstarttype : _c.uint, loopend : _c.uint, loopendtype : _c.uint) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetLoopPoints")
    FMOD_Channel_GetLoopPoints :: proc(channel : ^FMOD_CHANNEL, loopstart : ^_c.uint, loopstarttype : _c.uint, loopend : ^_c.uint, loopendtype : _c.uint) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_SetUserData")
    FMOD_Channel_SetUserData :: proc(channel : ^FMOD_CHANNEL, userdata : rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetUserData")
    FMOD_Channel_GetUserData :: proc(channel : ^FMOD_CHANNEL, userdata : ^rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_Channel_GetMemoryInfo")
    FMOD_Channel_GetMemoryInfo :: proc(channel : ^FMOD_CHANNEL, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_Release")
    FMOD_ChannelGroup_Release :: proc(channelgroup : ^FMOD_CHANNELGROUP) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetSystemObject")
    FMOD_ChannelGroup_GetSystemObject :: proc(channelgroup : ^FMOD_CHANNELGROUP, system : ^^FMOD_SYSTEM) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_SetVolume")
    FMOD_ChannelGroup_SetVolume :: proc(channelgroup : ^FMOD_CHANNELGROUP, volume : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetVolume")
    FMOD_ChannelGroup_GetVolume :: proc(channelgroup : ^FMOD_CHANNELGROUP, volume : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_SetPitch")
    FMOD_ChannelGroup_SetPitch :: proc(channelgroup : ^FMOD_CHANNELGROUP, pitch : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetPitch")
    FMOD_ChannelGroup_GetPitch :: proc(channelgroup : ^FMOD_CHANNELGROUP, pitch : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_Set3DOcclusion")
    FMOD_ChannelGroup_Set3DOcclusion :: proc(channelgroup : ^FMOD_CHANNELGROUP, directocclusion : _c.float, reverbocclusion : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_Get3DOcclusion")
    FMOD_ChannelGroup_Get3DOcclusion :: proc(channelgroup : ^FMOD_CHANNELGROUP, directocclusion : ^_c.float, reverbocclusion : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_SetPaused")
    FMOD_ChannelGroup_SetPaused :: proc(channelgroup : ^FMOD_CHANNELGROUP, paused : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetPaused")
    FMOD_ChannelGroup_GetPaused :: proc(channelgroup : ^FMOD_CHANNELGROUP, paused : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_SetMute")
    FMOD_ChannelGroup_SetMute :: proc(channelgroup : ^FMOD_CHANNELGROUP, mute : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetMute")
    FMOD_ChannelGroup_GetMute :: proc(channelgroup : ^FMOD_CHANNELGROUP, mute : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_Stop")
    FMOD_ChannelGroup_Stop :: proc(channelgroup : ^FMOD_CHANNELGROUP) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_OverrideVolume")
    FMOD_ChannelGroup_OverrideVolume :: proc(channelgroup : ^FMOD_CHANNELGROUP, volume : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_OverrideFrequency")
    FMOD_ChannelGroup_OverrideFrequency :: proc(channelgroup : ^FMOD_CHANNELGROUP, frequency : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_OverridePan")
    FMOD_ChannelGroup_OverridePan :: proc(channelgroup : ^FMOD_CHANNELGROUP, pan : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_OverrideReverbProperties")
    FMOD_ChannelGroup_OverrideReverbProperties :: proc(channelgroup : ^FMOD_CHANNELGROUP, prop : ^FMOD_REVERB_CHANNELPROPERTIES) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_Override3DAttributes")
    FMOD_ChannelGroup_Override3DAttributes :: proc(channelgroup : ^FMOD_CHANNELGROUP, pos : ^FMOD_VECTOR, vel : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_OverrideSpeakerMix")
    FMOD_ChannelGroup_OverrideSpeakerMix :: proc(channelgroup : ^FMOD_CHANNELGROUP, frontleft : _c.float, frontright : _c.float, center : _c.float, lfe : _c.float, backleft : _c.float, backright : _c.float, sideleft : _c.float, sideright : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_AddGroup")
    FMOD_ChannelGroup_AddGroup :: proc(channelgroup : ^FMOD_CHANNELGROUP, group : ^FMOD_CHANNELGROUP) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetNumGroups")
    FMOD_ChannelGroup_GetNumGroups :: proc(channelgroup : ^FMOD_CHANNELGROUP, numgroups : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetGroup")
    FMOD_ChannelGroup_GetGroup :: proc(channelgroup : ^FMOD_CHANNELGROUP, index : _c.int, group : ^^FMOD_CHANNELGROUP) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetParentGroup")
    FMOD_ChannelGroup_GetParentGroup :: proc(channelgroup : ^FMOD_CHANNELGROUP, group : ^^FMOD_CHANNELGROUP) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetDSPHead")
    FMOD_ChannelGroup_GetDSPHead :: proc(channelgroup : ^FMOD_CHANNELGROUP, dsp : ^^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_AddDSP")
    FMOD_ChannelGroup_AddDSP :: proc(channelgroup : ^FMOD_CHANNELGROUP, dsp : ^FMOD_DSP, connection : ^^FMOD_DSPCONNECTION) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetName")
    FMOD_ChannelGroup_GetName :: proc(channelgroup : ^FMOD_CHANNELGROUP, name : cstring, namelen : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetNumChannels")
    FMOD_ChannelGroup_GetNumChannels :: proc(channelgroup : ^FMOD_CHANNELGROUP, numchannels : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetChannel")
    FMOD_ChannelGroup_GetChannel :: proc(channelgroup : ^FMOD_CHANNELGROUP, index : _c.int, channel : ^^FMOD_CHANNEL) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetSpectrum")
    FMOD_ChannelGroup_GetSpectrum :: proc(channelgroup : ^FMOD_CHANNELGROUP, spectrumarray : ^_c.float, numvalues : _c.int, channeloffset : _c.int, windowtype : FMOD_DSP_FFT_WINDOW) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetWaveData")
    FMOD_ChannelGroup_GetWaveData :: proc(channelgroup : ^FMOD_CHANNELGROUP, wavearray : ^_c.float, numvalues : _c.int, channeloffset : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_SetUserData")
    FMOD_ChannelGroup_SetUserData :: proc(channelgroup : ^FMOD_CHANNELGROUP, userdata : rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetUserData")
    FMOD_ChannelGroup_GetUserData :: proc(channelgroup : ^FMOD_CHANNELGROUP, userdata : ^rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_ChannelGroup_GetMemoryInfo")
    FMOD_ChannelGroup_GetMemoryInfo :: proc(channelgroup : ^FMOD_CHANNELGROUP, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---
